crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__compound_add_assign.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  CompoundAssign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
          file: "<input>"
    op: AddAssign
    value:
      Literal:
        - Number: 5
        - start: 5
          end: 6
          file: "<input>"
    span:
      start: 0
      end: 7
      file: "<input>"
