crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__compound_mod_assign.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  CompoundAssign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
          file: "<input>"
    op: ModAssign
    value:
      Literal:
        - Number: 10
        - start: 5
          end: 7
          file: "<input>"
    span:
      start: 0
      end: 8
      file: "<input>"
