crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__incdec_decrement_array.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  CompoundAssign:
    target:
      Index:
        target:
          Identifier:
            name: arr
            span:
              start: 0
              end: 3
              file: "<input>"
        index:
          Identifier:
            name: i
            span:
              start: 4
              end: 5
              file: "<input>"
        span:
          start: 0
          end: 6
          file: "<input>"
    op: SubAssign
    value:
      Literal:
        - Number: 1
        - start: 10
          end: 11
          file: "<input>"
    span:
      start: 0
      end: 12
      file: "<input>"
