crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__incdec_decrement_name.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  CompoundAssign:
    target:
      Name:
        name: x
        span:
          start: 0
          end: 1
          file: "<input>"
    op: SubAssign
    value:
      Literal:
        - Number: 1
        - start: 5
          end: 6
          file: "<input>"
    span:
      start: 0
      end: 7
      file: "<input>"
