crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__incdec_increment_array.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: "program.items[0]"
---
Statement:
  CompoundAssign:
    target:
      Index:
        target:
          Identifier:
            name: arr
            span:
              start: 0
              end: 3
        index:
          Literal:
            - Number: 0
            - start: 4
              end: 5
        span:
          start: 0
          end: 6
    op: AddAssign
    value:
      Literal:
        - Number: 1
        - start: 10
          end: 11
    span:
      start: 0
      end: 12
