crates/atlas-runtime/tests/interpreter/snapshots/interpreter__interp_assignment__multiple_assignments.snap
---
source: crates/atlas-runtime/tests/interpreter/assignment.rs
expression: program
---
items:
  - Statement:
      Assign:
        target:
          Name:
            name: x
            span:
              start: 0
              end: 1
              file: "<input>"
        value:
          Literal:
            - Number: 1
            - start: 4
              end: 5
              file: "<input>"
        span:
          start: 0
          end: 6
          file: "<input>"
  - Statement:
      Assign:
        target:
          Name:
            name: y
            span:
              start: 7
              end: 8
              file: "<input>"
        value:
          Literal:
            - Number: 2
            - start: 11
              end: 12
              file: "<input>"
        span:
          start: 7
          end: 13
          file: "<input>"
  - Statement:
      Assign:
        target:
          Name:
            name: z
            span:
              start: 14
              end: 15
              file: "<input>"
        value:
          Literal:
            - Number: 3
            - start: 18
              end: 19
              file: "<input>"
        span:
          start: 14
          end: 20
          file: "<input>"
